Modifica CSS linee

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Part of <strong> A SIMPLY FABULOUS THANKSGIVING</strong>
       </p>
       <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
-      <p>
+      <p id="first">
         Wow your taste buds with this festive focaccia appetizer topped with
         sweet caramelized onions, tart cranberries, and creamy brie. It will
         become your new favorite holiday starter!
